# nbdev-framework-example

./: .gitignore  .pdm.toml  README.md  Text_label_data_c119.csv  classification_modeling.html  classification_preprocessing.html  cleaning_data.html  collecting_data.html  data_cleaning.html  data_collection.html  dvc.yaml  env.yml  evaluating_model.html  example.html  feature_extraction.html  index.html  inference.html  install-quarto.sh  nn_preprocessing.html  output.dvc  output_testing.html  params.yaml  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  test.py  training.html  training_model.html
NaN_Counts/: Maintenance_Text_dataNaCount.csv
_manifest/spdx_2.2/: manifest.spdx.json.sha256
eval/plots/: .gitignore
eval/plots/sklearn/: confusion_matrix.json
individualColumns/: 0.csv
nbdev_framework_example/: _modidx.py
nbs/: 00_Collecting_Data.ipynb  00_Collecting_Data.py  01_Cleaning_Data.ipynb  01_data_collection.ipynb  02.5_Cleaning_Data.ipynb  02_Data_Analysis.ipynb  02_Training_Model.ipynb  02_data_cleaning.ipynb  02a_NN_Preprocessing.ipynb  02b_Classification_Preprocessing.ipynb  02b_Classification_Preprocessing.py  03_Classification_Modeling.ipynb  03_Training_Model-PyTorch.ipynb  03_Training_Model.ipynb  03_feature_extraction.ipynb  03a_Training_Model.ipynb  03b_Classification_Modeling.ipynb  03b_Classification_Modeling.py  04_Evaluating_Model.ipynb  04_output_testing.ipynb  04a_Evaluating_Model.ipynb  04b_Evaluating_Model.ipynb  05_Analyzing_Results.ipynb  05_Example.ipynb  05_training.ipynb  06_inference.ipynb  07_example.ipynb  Cleaning_Data.ipynb  NN_HF_BERT.ipynb  exp.ipynb  index.ipynb  nbdev.yml  sidebar.yml
nbs/dvclive/: metrics.json  report.html
nbs/dvclive/plots/metrics/: epoch.tsv  total_flos.tsv
nbs/dvclive/plots/metrics/eval/: accuracy.tsv  loss.tsv  runtime.tsv  samples_per_second.tsv  steps_per_second.tsv
nbs/dvclive/plots/metrics/train/: loss.tsv  runtime.tsv  samples_per_second.tsv  steps_per_second.tsv
quarto/quarto-1.2.335/share/deno_std/cache/: dep_analysis_cache_v1
quarto/quarto-1.2.335/share/filters/authors/: authors.lua
quarto/quarto-1.2.335/share/filters/crossref/: crossref.lua
scripts/: .gitignore  01_Cleaning_Data.py  02b_Classification_Preprocessing.py  03a_Training_Model.py  exp.ipynb
training/: metrics.json
(+7 files in other folders)
