[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Peter Ainsworth", email = "painswor@nd.edu"},
]
dependencies = [
    "dvc>=2.51.0",
    "nbdev>=2.3.12",
    "pandas>=1.5.3",
    "numpy>=1.24.2",
    "nltk>=3.8.1",
    "matplotlib>=3.6.3",
    "quarto>=0.1.0",
    "transformers>=4.26.1",
    "datasets>=2.9.0",
    "keras==2.6.*",
    "torch>=1.8.0",
    "torchtext>=0.9.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.2.1",
    "nbconvert>=7.2.9",
    "seaborn>=0.12.2",
    "plotly>=5.13.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
